--- a/env.example
+++ b/env.example
@@ -1,45 +1,43 @@
-# Frontend Environment Variables
-# Copy this file to .env.local and update the values
+# Environment Variables for Qliq Admin Panel
+# Production URLs
 
-# API Base URLs
-NEXT_PUBLIC_AUTH_API_URL=http://localhost:8888/api/auth
-NEXT_PUBLIC_ADMIN_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8082/api
-NEXT_PUBLIC_CART_API_URL=http://localhost:8084/api
-NEXT_PUBLIC_REVIEW_API_URL=http://localhost:8083/api
-NEXT_PUBLIC_SEARCH_API_URL=http://localhost:8081/api
-NEXT_PUBLIC_MEDIA_API_URL=http://localhost:5005/api
+# Auth Service
+NEXT_PUBLIC_AUTH_API_URL=https://backendauth.qliq.ae/api/auth
+NEXT_PUBLIC_AUTH_BASE_URL=https://backendauth.qliq.ae/api
 
-# Consolidated Admin API URLs (all pointing to qliq-admin-api)
-NEXT_PUBLIC_VENDOR_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_COMMISSION_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_CUSTOMER_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_PROMOTION_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_REPORT_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_METRICS_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_SHIPPING_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_CMS_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_NOTIFICATION_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_CONFIG_API_URL=http://localhost:8009/api
-NEXT_PUBLIC_SUPPORT_API_URL=http://localhost:8009/api
+# Admin API Service
+NEXT_PUBLIC_ADMIN_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_METRICS_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_VENDOR_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_COMMISSION_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_CUSTOMER_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_PROMOTION_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_REPORT_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_SHIPPING_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_CMS_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_NOTIFICATION_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_CONFIG_API_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_SUPPORT_API_URL=https://adminapi.qliq.ae/api
 
-# Legacy API URLs (for backward compatibility)
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8009/api
-NEXT_PUBLIC_AUTH_BASE_URL=http://localhost:8888/api
+# Product Catalog Service
+NEXT_PUBLIC_PRODUCT_API_URL=https://backendcatalog.qliq.ae/api
 
-# SSE Configuration
-NEXT_PUBLIC_SSE_URL=http://localhost:8009/api/events
+# Search Service
+NEXT_PUBLIC_SEARCH_API_URL=https://search.qliq.ae/api
 
-# App Configuration
-NEXT_PUBLIC_APP_NAME=Qliq Admin
-NEXT_PUBLIC_APP_VERSION=1.0.0
-NEXT_PUBLIC_APP_ENV=development
+# Cart Service
+NEXT_PUBLIC_CART_API_URL=https://backendcart.qliq.ae/api
 
-# Feature Flags
-NEXT_PUBLIC_ENABLE_ANALYTICS=true
-NEXT_PUBLIC_ENABLE_NOTIFICATIONS=true
-NEXT_PUBLIC_ENABLE_REAL_TIME=true
+# Review Service
+NEXT_PUBLIC_REVIEW_API_URL=https://backendreview.qliq.ae/api
 
-# External Services
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+# Media Service (assuming it's part of admin API)
+NEXT_PUBLIC_MEDIA_API_URL=https://adminapi.qliq.ae/api
+
+# Frontend URLs
+NEXT_PUBLIC_FRONTEND_APP_URL=https://ecommerce-dev.qliq.ae
+NEXT_PUBLIC_ADMIN_APP_URL=https://dev-admin.qliq.ae
+
+# Additional Services
+NEXT_PUBLIC_API_BASE_URL=https://adminapi.qliq.ae/api
+NEXT_PUBLIC_SSE_URL=https://adminapi.qliq.ae/api/events
