--- a/.env
+++ b/.env
@@ -58,46 +58,46 @@
 # # Media Upload: 5005
 # # ===========================================
 
-# # # Auth Service - LOCAL
-# # NEXT_PUBLIC_AUTH_API_URL=http://localhost:8888/api/auth
-# # NEXT_PUBLIC_AUTH_BASE_URL=http://localhost:8888/api
+# Auth Service - LOCAL
+NEXT_PUBLIC_AUTH_API_URL=http://localhost:8888/api/auth
+NEXT_PUBLIC_AUTH_BASE_URL=http://localhost:8888/api
 
-# # # Admin API Service - LOCAL
-# # NEXT_PUBLIC_ADMIN_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_METRICS_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_VENDOR_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_COMMISSION_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_CUSTOMER_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_PROMOTION_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_REPORT_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_SHIPPING_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_CMS_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_NOTIFICATION_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_CONFIG_API_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_SUPPORT_API_URL=http://localhost:8009/api
+# Admin API Service - LOCAL
+NEXT_PUBLIC_ADMIN_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_METRICS_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_VENDOR_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_COMMISSION_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_CUSTOMER_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_PROMOTION_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_REPORT_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_SHIPPING_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_CMS_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_NOTIFICATION_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_CONFIG_API_URL=http://localhost:8009/api
+NEXT_PUBLIC_SUPPORT_API_URL=http://localhost:8009/api
 
-# # # Product Catalog Service - LOCAL
-# # NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8082/api
+# Product Catalog Service - LOCAL
+NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8082/api
 
-# # # Search Service - LOCAL
-# # NEXT_PUBLIC_SEARCH_API_URL=http://localhost:8085/api
+# Search Service - LOCAL
+NEXT_PUBLIC_SEARCH_API_URL=http://localhost:8085/api
 
-# # # Cart Service - LOCAL
-# # NEXT_PUBLIC_CART_API_URL=http://localhost:8084/api
+# Cart Service - LOCAL
+NEXT_PUBLIC_CART_API_URL=http://localhost:8084/api
 
-# # # Review Service - LOCAL
-# # NEXT_PUBLIC_REVIEW_API_URL=http://localhost:8083/api
+# Review Service - LOCAL
+NEXT_PUBLIC_REVIEW_API_URL=http://localhost:8083/api
 
-# # # Media Service - LOCAL
-# # NEXT_PUBLIC_MEDIA_API_URL=http://localhost:5005/api
+# Media Service - LOCAL
+NEXT_PUBLIC_MEDIA_API_URL=http://localhost:5005/api
 
-# # # Frontend URLs - LOCAL
-# # NEXT_PUBLIC_FRONTEND_APP_URL=http://localhost:3000
-# # NEXT_PUBLIC_ADMIN_APP_URL=http://localhost:3001
+# Frontend URLs - LOCAL
+NEXT_PUBLIC_FRONTEND_APP_URL=http://localhost:3000
+NEXT_PUBLIC_ADMIN_APP_URL=http://localhost:3001
 
-# # # Additional Services - LOCAL
-# # NEXT_PUBLIC_API_BASE_URL=http://localhost:8009/api
-# # NEXT_PUBLIC_SSE_URL=http://localhost:8009/api/events
+# Additional Services - LOCAL
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8009/api
+NEXT_PUBLIC_SSE_URL=http://localhost:8009/api/events
 
 
 
@@ -105,43 +105,43 @@
 # Environment Variables for Qliq Admin Panel - SERVER CONFIG
 # This file overrides the production URLs in .env for server deployment
 
-# Auth Service - SERVER
-NEXT_PUBLIC_AUTH_API_URL=https://backendauth.qliq.ae/api/auth
-NEXT_PUBLIC_AUTH_BASE_URL=https://backendauth.qliq.ae/api
+# # Auth Service - SERVER
+# NEXT_PUBLIC_AUTH_API_URL=https://backendauth.qliq.ae/api/auth
+# NEXT_PUBLIC_AUTH_BASE_URL=https://backendauth.qliq.ae/api
 
-# Admin API Service - SERVER
-NEXT_PUBLIC_ADMIN_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_METRICS_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_VENDOR_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_COMMISSION_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_CUSTOMER_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_PROMOTION_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_REPORT_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_SHIPPING_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_CMS_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_NOTIFICATION_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_CONFIG_API_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_SUPPORT_API_URL=https://adminapi.qliq.ae/api
+# # Admin API Service - SERVER
+# NEXT_PUBLIC_ADMIN_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_METRICS_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_VENDOR_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_COMMISSION_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_CUSTOMER_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_PROMOTION_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_REPORT_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_SHIPPING_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_CMS_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_NOTIFICATION_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_CONFIG_API_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_SUPPORT_API_URL=https://adminapi.qliq.ae/api
 
-# Product Catalog Service - SERVER
-NEXT_PUBLIC_PRODUCT_API_URL=https://backendcatalog.qliq.ae/api
+# # Product Catalog Service - SERVER
+# NEXT_PUBLIC_PRODUCT_API_URL=https://backendcatalog.qliq.ae/api
 
-# Search Service - SERVER
-NEXT_PUBLIC_SEARCH_API_URL=https://search.qliq.ae/api
+# # Search Service - SERVER
+# NEXT_PUBLIC_SEARCH_API_URL=https://search.qliq.ae/api
 
-# Cart Service - SERVER
-NEXT_PUBLIC_CART_API_URL=https://backendcart.qliq.ae/api
+# # Cart Service - SERVER
+# NEXT_PUBLIC_CART_API_URL=https://backendcart.qliq.ae/api
 
-# Review Service - SERVER
-NEXT_PUBLIC_REVIEW_API_URL=https://backendreview.qliq.ae/api
+# # Review Service - SERVER
+# NEXT_PUBLIC_REVIEW_API_URL=https://backendreview.qliq.ae/api
 
-# Media Service - SERVER
-NEXT_PUBLIC_MEDIA_API_URL=https://adminapi.qliq.ae/api
+# # Media Service - SERVER
+# NEXT_PUBLIC_MEDIA_API_URL=https://adminapi.qliq.ae/api
 
-# Frontend URLs - SERVER
-NEXT_PUBLIC_FRONTEND_APP_URL=https://ecommerce-dev.qliq.ae
-NEXT_PUBLIC_ADMIN_APP_URL=https://dev-admin.qliq.ae
+# # Frontend URLs - SERVER
+# NEXT_PUBLIC_FRONTEND_APP_URL=https://ecommerce-dev.qliq.ae
+# NEXT_PUBLIC_ADMIN_APP_URL=https://dev-admin.qliq.ae
 
-# Additional Services - SERVER
-NEXT_PUBLIC_API_BASE_URL=https://adminapi.qliq.ae/api
-NEXT_PUBLIC_SSE_URL=https://adminapi.qliq.ae/api/events
+# # Additional Services - SERVER
+# NEXT_PUBLIC_API_BASE_URL=https://adminapi.qliq.ae/api
+# NEXT_PUBLIC_SSE_URL=https://adminapi.qliq.ae/api/events
